dist/wizarr/Service.wizarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: wizarr
spec:
  externalIPs: []
  ports:
    - name: http
      port: 5690
      targetPort: 5690
  selector:
    cdk8s.io/metadata.addr: wizarr-wizarr-deployment-c8baf10c
  type: ClusterIP
